--- a/OPass/Tabs/SessionTab/SessionTableViewCell.xib
+++ b/OPass/Tabs/SessionTab/SessionTableViewCell.xib
@@ -9,43 +9,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SessionCell" id="l9Y-7J-4kA" customClass="SessionTableViewCell" customModule="OPass" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="420" height="80"/>
+        <tableViewCell opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SessionCell" id="l9Y-7J-4kA" customClass="SessionTableViewCell" customModule="OPass" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="420" height="120"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l9Y-7J-4kA" id="U81-Gg-HeJ">
-                <rect key="frame" x="0.0" y="0.0" width="420" height="80"/>
-                <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l9Y-7J-4kA" translatesAutoresizingMaskIntoConstraints="NO" id="U81-Gg-HeJ">
+                <rect key="frame" x="0.0" y="0.0" width="420" height="120"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TdY-Ng-p1O">
-                        <rect key="frame" x="15" y="11" width="356" height="35"/>
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TdY-Ng-p1O">
+                        <rect key="frame" x="15" y="11" width="348" height="49"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="8Ty-3Y-mqM"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="8Ty-3Y-mqM"/>
                         </constraints>
+                        <string key="text">A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title, A Long Title!!!!!</string>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="HH" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="13" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="R4H-1T-Ebg">
-                        <rect key="frame" x="15" y="34" width="180" height="35"/>
+                        <rect key="frame" x="15" y="65" width="348" height="20"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="hkV-D8-Dpt"/>
-                            <constraint firstAttribute="width" constant="180" id="m57-H3-wA8"/>
+                            <constraint firstAttribute="height" constant="20" id="hkV-D8-Dpt"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wce-ZU-hQC">
-                        <rect key="frame" x="205" y="41.5" width="37.5" height="20"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="Gsg-RD-xUh"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q7p-MF-tNF">
-                        <rect key="frame" x="376" y="24" width="32" height="32"/>
+                        <rect key="frame" x="368" y="44" width="32" height="32"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="q7p-MF-tNF" secondAttribute="height" multiplier="1:1" id="3d8-ss-VkA"/>
                             <constraint firstAttribute="height" constant="32" id="tXu-dJ-YHF"/>
@@ -61,26 +51,44 @@
                             <action selector="favoriteTouchUpOutsideAction:" destination="l9Y-7J-4kA" eventType="touchUpOutside" id="sfT-eA-Oyr"/>
                         </connections>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o1H-n6-tfS" customClass="TagListView" customModule="TagListView">
+                        <rect key="frame" x="15" y="90" width="348" height="30"/>
+                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="tSQ-iV-esx"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailingMargin" secondItem="q7p-MF-tNF" secondAttribute="trailingMargin" constant="5" id="4Ha-SQ-Y0T"/>
                     <constraint firstItem="TdY-Ng-p1O" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leadingMargin" id="4SL-D5-Uyz"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="q7p-MF-tNF" secondAttribute="trailing" constant="5" id="MFY-jH-dbA"/>
                     <constraint firstItem="R4H-1T-Ebg" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leadingMargin" id="NJJ-P0-CRQ"/>
                     <constraint firstItem="q7p-MF-tNF" firstAttribute="centerY" secondItem="U81-Gg-HeJ" secondAttribute="centerY" id="Teq-NY-e09"/>
-                    <constraint firstItem="wce-ZU-hQC" firstAttribute="leading" secondItem="R4H-1T-Ebg" secondAttribute="trailing" constant="10" id="bpQ-b5-wGD"/>
                     <constraint firstItem="q7p-MF-tNF" firstAttribute="leading" secondItem="TdY-Ng-p1O" secondAttribute="trailing" constant="5" id="cNk-48-c8B"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="R4H-1T-Ebg" secondAttribute="bottom" id="diP-1r-XdF"/>
-                    <constraint firstItem="wce-ZU-hQC" firstAttribute="centerY" secondItem="R4H-1T-Ebg" secondAttribute="centerY" id="oX5-0b-aNR"/>
+                    <constraint firstItem="o1H-n6-tfS" firstAttribute="leading" secondItem="U81-Gg-HeJ" secondAttribute="leadingMargin" id="cmc-CU-vSd"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="o1H-n6-tfS" secondAttribute="bottom" id="ekq-g2-dIr"/>
+                    <constraint firstItem="o1H-n6-tfS" firstAttribute="top" secondItem="R4H-1T-Ebg" secondAttribute="bottom" constant="5" id="hVv-uF-QcG"/>
+                    <constraint firstItem="q7p-MF-tNF" firstAttribute="leading" secondItem="R4H-1T-Ebg" secondAttribute="trailing" constant="5" id="tK4-i0-a6b"/>
+                    <constraint firstItem="q7p-MF-tNF" firstAttribute="leading" secondItem="o1H-n6-tfS" secondAttribute="trailing" constant="5" id="txi-u0-pzY"/>
                     <constraint firstItem="TdY-Ng-p1O" firstAttribute="top" secondItem="U81-Gg-HeJ" secondAttribute="topMargin" id="uLT-1v-f53"/>
+                    <constraint firstItem="R4H-1T-Ebg" firstAttribute="top" secondItem="TdY-Ng-p1O" secondAttribute="bottom" constant="5" id="uw3-eq-arf"/>
                 </constraints>
             </tableViewCellContentView>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="U81-Gg-HeJ" secondAttribute="bottom" id="Ns8-9W-r5Q"/>
+                <constraint firstItem="U81-Gg-HeJ" firstAttribute="centerX" secondItem="l9Y-7J-4kA" secondAttribute="centerX" id="Z9P-cG-Dhb"/>
+                <constraint firstItem="U81-Gg-HeJ" firstAttribute="leading" secondItem="l9Y-7J-4kA" secondAttribute="leading" id="ZL3-wK-3iX"/>
+                <constraint firstAttribute="trailing" secondItem="U81-Gg-HeJ" secondAttribute="trailing" id="diw-81-Ryh"/>
+                <constraint firstItem="U81-Gg-HeJ" firstAttribute="top" secondItem="l9Y-7J-4kA" secondAttribute="top" id="iKL-Ci-tTx"/>
+                <constraint firstItem="U81-Gg-HeJ" firstAttribute="centerY" secondItem="l9Y-7J-4kA" secondAttribute="centerY" id="ydW-Jo-3gS"/>
+            </constraints>
             <connections>
                 <outlet property="FavoriteButton" destination="q7p-MF-tNF" id="bvA-Ax-kaH"/>
-                <outlet property="LabelLabel" destination="wce-ZU-hQC" id="lzM-XO-SP2"/>
                 <outlet property="RoomLocationLabel" destination="R4H-1T-Ebg" id="KnH-OH-VV9"/>
                 <outlet property="SessionTitleLabel" destination="TdY-Ng-p1O" id="t1m-tD-VBb"/>
+                <outlet property="TagList" destination="o1H-n6-tfS" id="PAs-fF-WPv"/>
             </connections>
-            <point key="canvasLocation" x="-4" y="26"/>
+            <point key="canvasLocation" x="-4.7999999999999998" y="25.187406296851577"/>
         </tableViewCell>
     </objects>
 </document>
